--- a/templates/includes/header/partial_departamento_dropdown.html
+++ b/templates/includes/header/partial_departamento_dropdown.html
@@ -7,16 +7,19 @@
 
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         <a class="dropdown-item"
-           href="{% url 'ubicacion:departamento' request.user.perfil.departamento.pk %}"><i class="fas fa-chart-pie"></i> Dashboard</a>
+           href="{% url 'ubicacion:departamento' request.user.perfil.departamento.pk %}"><i
+                class="fas fa-chart-pie"></i> Dashboard</a>
 
         {% if perms.ubicacion.ver_departamento %}
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"><i class="fas fa-file-alt"></i> Reportes</a>
+            <a class="dropdown-item"
+               href="{% url 'ubicacion:reporte-departamento' request.user.perfil.departamento.pk %}"><i
+                    class="fas fa-file-alt"></i> Reportes</a>
         {% endif %}
 
 
         {% if perms.ubicacion.ver_profesores_departamento %}
-        <div class="dropdown-divider"></div>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item"
                href="{% url 'perfil:profesores-departamento' request.user.perfil.departamento.pk %}">Profesores
                 <span
@@ -25,7 +28,7 @@
 
 
         {% if perms.ubicacion.ver_actividades_departamento %}
-        <div class="dropdown-divider"></div>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'actividad:departamento' request.user.perfil.departamento.pk %}">Actividades
                 <span
                         class="badge badge-pill badge-primary">{{ request.user.perfil.departamento.actividades.count }}</span></a>
