--- a/templates/includes/header/partial_escuela_dropdown.html
+++ b/templates/includes/header/partial_escuela_dropdown.html
@@ -9,12 +9,13 @@
 
         <a class="dropdown-item" href="{% url 'ubicacion:escuela' request.user.perfil.escuela.pk %}"><i
                 class="fas fa-chart-pie"></i> Dashboard</a>
-        
+
 
 
         {% if perms.ubicacion.ver_escuela %}
-        <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"><i class="fas fa-file-alt"></i> Reportes</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'ubicacion:reporte-escuela' request.user.perfil.escuela.pk %}"><i
+                    class="fas fa-file-alt"></i> Reportes</a>
         {% endif %}
 
 
