--- a/templates/includes/header/partial_admin_utils_dropdown.html
+++ b/templates/includes/header/partial_admin_utils_dropdown.html
@@ -6,7 +6,7 @@
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         {% if request.user.is_superuser %}
-            <a class="dropdown-item" href="/admin/">Admin</a>
+            <a class="dropdown-item" href="/redux/">Admin</a>
             <div class="dropdown-divider"></div>
             {% if request.user.is_staff %}
                 <a class="dropdown-item" href="{% url 'solicitud:lista' %}">Solicitudes</a>
